--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,21 @@
 <html lang="pt-BR">
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Protegido</title>
+    
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' https://www.gstatic.com https://www.google.com https://www.googleapis.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src https://fonts.gstatic.com;
+      img-src 'self' data:;
+      connect-src 'self' https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com;
+      frame-src https://www.google.com;
+    ">
+
     <link rel="stylesheet" href="css/dashboard.css">
 </head>
 
@@ -30,7 +41,7 @@
     <!-- Configuração -->
     <script src="../../backend/firebase-config.private.js"></script>
     <script src="js/firebase-config.js"></script>
-    
+
     <!-- Lógica do Dashboard -->
     <script src="js/dashboard.js"></script>
 
