--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Protegido</title>
-    
+
+    <meta http-equiv="X-Frame-Options" content="DENY">
+
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self';
       script-src 'self' https://www.gstatic.com https://www.google.com https://www.googleapis.com;
