--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login com Firebase</title>
 
+    <meta http-equiv="X-Frame-Options" content="DENY">
+
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self';
       script-src 'self' https://www.gstatic.com https://www.google.com https://www.googleapis.com;
