--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <div id="login-message" class="auth-message"></div>
             <div class="auth-links">
                 <a href="#" id="show-register">Criar conta</a> |
-                <a href="reset-password.html">Esqueceu a senha?</a>
+                <a href="reset-password.html">Esqueceu a senha?</a> |
+                <a href="https://www.gov.br/esporte/pt-br/acesso-a-informacao/lgpd" target="_blank">LGPD</a> 
             </div>
         </form>
 
